--- a/package.json
+++ b/package.json
@@ -12,16 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.6",
+    "@angular/cdk": "^5.2.3",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.3",
+    "@angular/material-moment-adapter": "^5.2.3",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@covalent/core": "^1.0.0",
+    "@covalent/dynamic-forms": "^1.0.0",
+    "@covalent/highlight": "^1.0.0",
+    "@covalent/http": "^1.0.0",
+    "@covalent/markdown": "^1.0.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "moment": "^2.21.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
